aie-server/src/main/java/com/test/aieserver/config/error/code/ErrorReason.java
package com.test.aieserver.config.error.code;


import lombok.Builder;
import lombok.Getter;

@Getter
@Builder
public class ErrorReason {
    private final Integer status;
    private final String code;
    private final String reason;
}